# armbot

./: .gitignore  README.md
src/armbot_bringup/: CMakeLists.txt  package.xml
src/armbot_bringup/launch/: sim_complete.launch
src/armbot_controller/: CMakeLists.txt  package.xml
src/armbot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
src/armbot_controller/include/armbot_controller/: armbot_interface.h
src/armbot_controller/launch/: controller.launch
src/armbot_controller/src/: angles_converter.cpp  armbot_interface.cpp
src/armbot_controller/srv/: AnglesConverter.srv
src/armbot_description/: CMakeLists.txt  package.xml
src/armbot_description/launch/: display.launch  gazebo.launch
src/armbot_description/mesh/: Base.STL  Basement.STL  Claw_support.STL  Gripper_left.STL  Gripper_right.STL  Horizontal_arm.STL  Vertical_arm.STL
src/armbot_description/rviz/: display.rviz
src/armbot_description/urdf/: armbot.urdf.xacro
src/armbot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/armbot_moveit/config/: armbot.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
src/armbot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/armbot_remote/: CMakeLists.txt  package.xml
src/armbot_remote/action/: ArmbotTask.action
src/armbot_remote/launch/: remote_interface.launch
src/armbot_remote/scripts/: alexa_interface.py
src/armbot_remote/src/: task_server.cpp
